--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   },
   "devDependencies": {
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.1",
+    "socket.io": "^4.7.2"
   }
 }
